--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,9 @@
-language: node_js
+language:
+    - node_js
+install:
+    - npm install
+    - npm install -g codecov
+script:
+    - npm run cover
+    - npm run report
+    - codecov
