--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "eslint": "eslint src test --fix",
     "eslint_prepush": "eslint src test",
     "test": "mocha test --recursive",
+    "cover" : "nyc mocha test --recursive",
+    "report": "nyc report --reporter=text-lcov > coverage.lcov",
     "test_prepush": "mocha test --recursive --reporter nyan"
   },
   "repository": {
@@ -37,6 +39,7 @@
     "eslint": "^5.12.0",
     "husky": "^1.3.1",
     "mocha": "^5.2.0",
+    "nyc": "^13.1.0",
     "sinon": "^7.2.2"
   }
 }
