--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ install:
     - npm install
     - npm install -g codecov
 script:
+    - npm run eslint_prepush
     - npm run cover
     - npm run report
     - codecov
