--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
   },
   "devDependencies": {
     "eslint": "^5.12.0",
+    "handlebars": "^4.1.0",
     "husky": "^1.3.1",
     "mocha": "^5.2.0",
-    "nyc": "^13.1.0",
+    "nyc": "^13.3.0",
     "showdown": "^1.9.0",
     "sinon": "^7.2.2"
   }
