--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language:
     - node_js
+    - php
 node_js:
     - 10
 php:
-    - 7
+    - "7.0"
 install:
     - npm install
     - npm install -g codecov
