Attempt troll stuff to see on windows

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language:
     - node_js
-    - php
 node_js:
     - 10
-php:
-    - "7.0"
 install:
+    - choco install php
     - npm install
     - npm install -g codecov
 script:
