--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,12 @@ matrix:
         - os: windows
           install:
               - choco install php
-              - & call RefreshEnv.cmd
 install:
     - npm install
     - npm install -g codecov
 script:
+    - php73 --version
+    - php --version
     - npm run eslint_prepush
     - npm run cover
     - npm run report
