--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
     "nyc": "^13.3.0",
     "showdown": "^1.9.0",
     "sinon": "^7.2.2"
+  },
+  "dependencies": {
+    "argparse": "^1.0.10",
+    "cosmiconfig": "^5.1.0"
   }
 }
