--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/run.js",
+    "compile": "nexe src/run.js -o bin/run -r \"src/invoker/*.js\" \"src/invoker/*.php\" ",
     "eslint": "eslint src test --fix",
     "eslint_prepush": "eslint src test",
     "test": "mocha test --recursive",
@@ -47,6 +48,7 @@
   },
   "dependencies": {
     "argparse": "^1.0.10",
-    "cosmiconfig": "^5.1.0"
+    "cosmiconfig": "^5.1.0",
+    "nexe": "^v3.0.0-beta.15"
   }
 }
