Docs beginning and integration helper with bin

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Behavior Driven Development Test Report Framework",
   "main": "src/index.js",
+  "bin": {
+    "pfe": "./bin/cli.js"
+  },
   "scripts": {
     "start": "node src/run.js",
     "eslint": "eslint src test --fix",
