Added cssFiles and templates to acceptation test.

--- a/test/acceptation/.testrc
+++ b/test/acceptation/.testrc
@@ -1,4 +1,6 @@
 {
-    "outputPath" : "test/acceptation/artifacts",
-    "basePath" : "test/acceptation/artifacts/test1.md"
+    "outputPath": "test/acceptation/artifacts",
+    "basePath": "test/acceptation/artifacts/test1.md",
+    "cssFiles": "test/acceptation/artifacts/styles.css",
+    "template": "test/acceptation/artifacts/template.html"
 }
