--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "mocha": "^5.2.0",
     "nyc": "^13.3.0",
     "showdown": "^1.9.0",
-    "sinon": "^7.2.2"
+    "sinon": "^7.2.2",
+    "test-console": "^1.1.0"
   },
   "dependencies": {
     "argparse": "^1.0.10",
