--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     }
   },
   "devDependencies": {
+    "eol": "^0.9.1",
     "eslint": "^5.12.0",
     "handlebars": "^4.1.0",
     "husky": "^1.3.1",
